l3/code/kustomize/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webapp-svc
spec:
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
