l3/code/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: webapp.cloudacademy.PUBLICIP.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp-svc
          servicePort: 80
